--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.min.css?v=1.1">
   <script defer="defer" src="js/main.js"></script>
   <title>С EXEED НА ГУМ-КАТОК | Главаная страница</title><!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -152,7 +152,7 @@
           </div>
            <div class="news__bottom bottom-news">
              <p class="bottom-news__text">* Действительно с 19 декабря 2022 года</p>
-             <a href="data/rules_exeed.docx" class="bottom-news__btn">полные правила проведения акции</a>
+             <a href="data/full-rules.pdf" download class="bottom-news__btn">полные правила проведения акции</a>
            </div>
         </div>
       </section>
