--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css?v=1.1">
+  <link rel="stylesheet" href="css/style.min.css?v=1.2">
   <script defer="defer" src="js/main.js"></script>
-  <title>С EXEED НА ГУМ-КАТОК | Главаная страница</title><!-- Yandex.Metrika counter -->
+  <title>С EXEED НА ГУМ-КАТОК | Главная страница</title><!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
       m[i] = m[i]
