--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css?v=1.4">
+  <link rel="stylesheet" href="css/style.min.css?v=1.3">
   <script defer="defer" src="js/main.js"></script>
   <title>С EXEED НА ГУМ-КАТОК | Главная страница</title><!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -128,7 +128,7 @@
             </div>
             <div class="find__images" aria-hidden="true">
               <div class="find__img find__img--car">
-                <div class="find__bg" style="background-image: url('img/find/car.webp');"></div>
+                <div class="find__bg" style="background-image: url('img/find/car2.webp');"></div>
               </div>
               <div class="find__img find__img--box">
                 <div class="find__bg" style="background-image: url('img/find/box.webp');"></div>
@@ -150,10 +150,10 @@
           <div class="news__car" aria-hidden="true">
             <div class="news__bg" style="background-image: url('img/news/car3.webp');"></div>
           </div>
-           <div class="news__bottom bottom-news">
-             <p class="bottom-news__text">* Действительно с 19 декабря 2022 года</p>
-             <a href="data/full-rules.pdf" download class="bottom-news__btn">полные правила проведения акции</a>
-           </div>
+          <div class="news__bottom bottom-news">
+            <p class="bottom-news__text">* Действительно с 19 декабря 2022 года</p>
+            <a href="data/full-rules.pdf" download class="bottom-news__btn">полные правила проведения акции</a>
+          </div>
         </div>
       </section>
     </main>
