--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css?v=1.3">
+  <link rel="stylesheet" href="css/style.min.css?v=1.4">
   <script defer="defer" src="js/main.js"></script>
   <title>С EXEED НА ГУМ-КАТОК | Главная страница</title><!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -47,6 +47,9 @@
           <div class="header__label">Этой зимой<br>с <span>EXEED</span><br>на ГУМ-каток</div>
         </div>
         <div class="header__actions"><a href="#participate" class="header__button"><span>принять участие в конкурсе</span> <img src="img/icons/arrow-right-white.png" width="15" height="30" alt=""> </a><a href="#find" class="header__button"><span>как нас найти</span> <img src="img/icons/arrow-right-white.png" width="15" height="30" alt=""> </a><a href="#news" class="header__button"><span>на каток с exeed</span> <img src="img/icons/arrow-right-white.png" width="15" height="30" alt=""></a></div>
+        <div class="header__mob-image">
+          <img src="img/hero/mob-car2.webp" alt="">
+        </div>
       </div>
     </header>
     <main class="main" id="main">
